--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -13,9 +13,15 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - name: cmake
-      run: mkdir build && cd build && cmake ..
     - name: make
-      run: make
-    - name: make test
-      run: make test
+      run: mkdir build && cd build && cmake .. && make
+      
+  testing:
+
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v4
+    - name: make
+      run: mkdir build && cd build && cmake .. && make && make test
+
