--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -7,21 +7,14 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build:
+  run-tests:
 
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v4
-    - name: make
+    - name: make 
       run: mkdir build && cd build && cmake .. && make
-      
-  testing:
-
-    runs-on: ubuntu-latest
-
-    steps:
-    - uses: actions/checkout@v4
-    - name: make
+    - name: make test
       run: mkdir build && cd build && cmake .. && make && make test
-
+      
