--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: make 
-      run: mkdir build && cd build && cmake .. && make
+      run: mkdir build && cd build && cmake ..  -G "Unix Makefiles" && make
     - name: make test
-      run: cd build && make && make test
+      run: cd build && make && ctest --timeout 900
       
